@@ -3,9 +3,14 @@
   <groupId>PetStoreAutomation</groupId>
   <artifactId>PetStoreAutomation</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+</properties>
  <build>
 	 <pluginManagement>
 		 <plugins>
+			 
 			 <plugin>
           		<groupId>org.apache.maven.plugins</groupId>
           		<artifactId>maven-surefire-plugin</artifactId>
@@ -22,9 +27,39 @@
 			 	<groupId>org.apache.maven.plugins</groupId>
           		<artifactId>maven-compiler-plugin</artifactId>
           		<version>3.11.0</version>
+          		
           		<configuration>
-					  <source>1.8</source>
-					  <target>1.8</target>
+					  
+					  <source>17</source>
+					  <target>17</target>
+				<fork>true</fork>
+        <compilerArgs>
+            <arg>--enable-preview</arg>
+            <arg>-Xlint:all</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+        </compilerArgs>
+        <!--for unmappable characters in classes-->
+        <encoding>UTF-8</encoding>
+        <showDeprecation>true</showDeprecation>
+        <showWarnings>true</showWarnings>
+        <!--for lombok annotations to resolve-->
+        <!--contradictory to maven, intelliJ fails with this-->
+        <annotationProcessorPaths>
+            <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.16</version>
+            </path>
+        </annotationProcessorPaths>
 				  </configuration>
 			 </plugin>
           </plugins>
